changing the agent to use a class that was previously not available